@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: Table is partitioned and partition specification is needed
